cmake_minimum_required(VERSION 3.24)
project(Practica1DS)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practica1DS main.cpp FactoriaAbstracta.cpp FactoriaAbstracta.h Cliente.cpp MesaCocina.cpp MesaOficina.cpp Mesa.cpp FactoriaMuebles.cpp FactoriaMuebles.h Silla.cpp Silla.h SillaOficina.cpp SillaOficina.h SillaCocina.cpp SillaCocina.h)