cmake_minimum_required(VERSION 3.24)
project(Practica1DS)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practica1DS main.cpp FactoriaAbstracta.cpp FactoriaAbstracta.h Cliente.cpp Cliente.h FactoriaMuebles.cpp FactoriaMuebles.h  Mesa.cpp Mesa.h MesaOficina.cpp MesaOficina.h MesaCocina.cpp MesaCocina.h Silla.cpp Silla.h SillaOficina.cpp SillaOficina.h SillaCocina.cpp SillaCocina.h)